Some styling complete on front page and content page

--- a/wp-content/themes/audio-active/languages/audio-active.pot
+++ b/wp-content/themes/audio-active/languages/audio-active.pot
@@ -205,20 +205,20 @@ msgstr ""
 
 #. Theme URI of the plugin/theme
 #@ _s
-msgid "http://underscores.me/"
+msgid "http://icrossing.co.uk/"
 msgstr ""
 
 #. Description of the plugin/theme
 #@ _s
-msgid "Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for."
+msgid "Custom theme for AudioActive"
 msgstr ""
 
 #. Author of the plugin/theme
 #@ _s
-msgid "Automattic"
+msgid "Jana Lyon"
 msgstr ""
 
 #. Author URI of the plugin/theme
 #@ _s
-msgid "http://automattic.com/"
+msgid "http://icrossing.co.uk/"
 msgstr ""
